# tpx3awkward

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: conf.py  index.md
docs/source/: conf.py  index.rst  installation.rst  usage.rst
src/tpx3awkward/: __init__.py  _utils.py
src/tpx3awkward/processing/: __init__.py  cluster.py  corrections.py  decoding.py  files.py  pipeline.py  process.py  schemas.py
tests/: test_cluster.py  test_integration.py  test_package.py  test_toa.py
tests/data/: processed_concat_test_data.parquet  raw_test_data_0.tpx3  raw_test_data_03.tpx3  raw_test_data_04.tpx3  raw_test_data_05.tpx3  raw_test_data_06.tpx3  raw_test_data_07.tpx3  raw_test_data_08.tpx3  raw_test_data_09.tpx3  raw_test_data_1.tpx3  raw_test_data_10.tpx3  raw_test_data_11.tpx3  raw_test_data_12.tpx3  raw_test_data_13.tpx3  raw_test_data_14.tpx3  raw_test_data_15.tpx3  raw_test_data_16.tpx3  raw_test_data_17.tpx3  raw_test_data_18.tpx3  raw_test_data_19.tpx3  raw_test_data_2.tpx3  raw_test_data_20.tpx3  raw_test_data_21.tpx3
tests/integration/: test_integration.py
tests/processing/: test_cluster.py  test_pipeline.py
tests/unit/: test_cluster.py  test_toa.py
tpx3awkward/: Timewalk_clustering_example.ipynb  Timewalk_corr.py  __init__.py  _utils.py
tpx3awkward/demos/: demo_centroid.ipynb
tpx3awkward/examples/: example.ipynb
tpx3awkward/tests/: test_toa.py
