[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "tpx3awkward"
authors = [
  { name = "Thomas Caswell", email = "tcaswell@bnl.gov" },
  { name = "Justin Goodrich", email = "jgoodrich@bnl.gov" },
  { name = "Eugene Matviychuk", email = "ymatviych1@bnl.gov" },
  { name = "Joseph Hanrahan", email = "jhanrahan@bnl.gov" }
]
description = "A great package."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "numpy",
  "pandas",
  "numba",
  "tqdm",
  "pyarrow",
  "tables",
]

[project.urls]
Homepage = "https://github.com/NSLS-II/tpx3awkward"
"Bug Tracker" = "https://github.com/NSLS-II/tpx3awkward/issues"
Discussions = "https://github.com/NSLS-II/tpx3awkward/discussions"
Changelog = "https://github.com/NSLS-II/tpx3awkward/releases"


[dependency-groups]
test = [
  "pytest>=9",
  "pytest-cov>=7",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]
dev = [
  {include-group = "test"},
  {include-group = "docs"},
  "pre-commit",
  "ruff"
]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/tpx3awkward/_version.py"

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.hatch-test]
dependency-groups = ["test"]
env-vars.PYTHONWARNDEFAULTENCODING = "1"


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["tpx3awkward"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]


[tool.ruff]
line-length = 125

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "E",      # pycodestyle - https://docs.astral.sh/ruff/rules/#error-e
  "FLY",    # flynt
  "FURB",   # refurb
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "T10",    # flake8-debugger
  "TC",     # flake8-type-checking
  "UP",     # pyupgrade
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "PLR1714",
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["tpx3awkward._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"docs/**" = ["E501"]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
tpx3awkward = { path = ".", editable = true }

[tool.pixi.environments]
default = {solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
check = "pre-commit run --all-files"
tests = "pytest"
